[package]
name = "rurl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.4"
chrono = { version = "0.4.19", features = ["serde"] }
tokio = { version = "1.28.0", features = ["full"] }
url = "2.3.1"

