[package]
name = "rurlr"
version = "0.3.0"
edition = "2021"
description = "Simple CLI url checker that pings the target to see if its up"
license = "MIT OR Apache-2.0"
authors = ["Chris Quinn <chrisquinnr@gmail.com>"]
categories = ["command-line-utilities"]

[dependencies]
reqwest = "0.11.4"
chrono = { version = "0.4.19", features = ["serde"] }
tokio = { version = "1.28.0", features = ["full"] }
url = "2.3.1"
rustout = "0.4.0"
log = "0.4.18"

